--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: "groote";
-  src: url("./Groote-Regular.otf");
+  src: url("./fonts/Groote-Regular.otf");
 }
 @font-face {
   font-family: "clash";
-  src: url("./ClashGrotesk-Semibold.ttf");
+  src: url("./fonts/ClashGrotesk-Semibold.ttf");
 }
 @font-face {
   font-family: "sign";
-  src: url("./Strokify Light - Demo.ttf");
+  src: url("./fonts/signature.ttf");
 }
 * {
   margin: 0;
@@ -26,9 +26,10 @@ body {
 main {
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(/TeamFlags/1CSK.jpeg);
-  background-size: cover;
+  background-color: #111;
+  background: linear-gradient(in oklab 90deg, rgb(42, 123, 155) 0%, rgb(87, 199, 133) 50%, rgb(237, 221, 83) 100%);
   background-position: center;
+  background-size: cover;
 }
 main .container {
   width: 100%;
@@ -50,6 +51,13 @@ main .container p {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.514);
   font-family: clash;
   text-align: center;
+}
+main .container p span {
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.514);
+  margin-left: 1rem;
+  font-size: 3rem;
+  font-family: sign;
+  color: rgb(255, 232, 25);
 }
 main .container #wins-stars {
   width: 200px;
@@ -93,12 +101,4 @@ main .container #btn:active {
 
 .hidden {
   opacity: 0;
-}
-
-span {
-  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.514);
-  margin-left: 1rem;
-  font-size: 3rem;
-  font-family: sign;
-  color: rgb(255, 232, 25);
 }/*# sourceMappingURL=style.css.map */
