--- a/style.scss
+++ b/style.scss
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'groote';
-  src: url('./Groote-Regular.otf');
+  src: url('./fonts/Groote-Regular.otf');
 }
 
 @font-face {
   font-family: 'clash';
-  src: url('./ClashGrotesk-Semibold.ttf');
+  src: url('./fonts/ClashGrotesk-Semibold.ttf');
 }
 
 @font-face {
   font-family: 'sign';
-  src: url('./Strokify\ Light\ -\ Demo.ttf');
+  src: url('./fonts/signature.ttf');
 }
 
 * {
@@ -18,6 +18,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html,
 body {
   width: 100%;
@@ -28,9 +29,15 @@ body {
 main {
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(/TeamFlags/1CSK.jpeg);
-  background-size: cover;
+  background-color: #111;
+  background: linear-gradient(
+    in oklab 90deg,
+    rgba(42, 123, 155, 1) 0%,
+    rgba(87, 199, 133, 1) 50%,
+    rgba(237, 221, 83, 1) 100%
+  );
   background-position: center;
+  background-size: cover;
 
   .container {
     width: 100%;
@@ -53,6 +60,14 @@ main {
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.514);
       font-family: clash;
       text-align: center;
+
+      span {
+        text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.514);
+        margin-left: 1rem;
+        font-size: 3rem;
+        font-family: sign;
+        color: rgb(255, 232, 25);
+      }
     }
 
     #wins-stars {
@@ -98,12 +113,4 @@ main {
 .hidden {
   opacity: 0;
   // display: none;
-}
-
-span {
-  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.514);
-  margin-left: 1rem;
-  font-size: 3rem;
-  font-family: sign;
-  color: rgb(255, 232, 25);
 }
